--- a/public/dinamis/loop/detailartikel.html
+++ b/public/dinamis/loop/detailartikel.html
@@ -1,8 +1,9 @@
     <style type="text/css">
         .ck-reset_all{display: none;}
         .ck .ck-widget:hover{outline-color: transparent;}
+        .ckeditor span{background-color: transparent !important;}
 
-}
+
     </style>
     <section class="detail_artikel">
         <div class="col-md-12 align-items-center ftco-animate">
@@ -40,9 +41,17 @@
                         </div>
                     </div>
                 </div>
+                <?php
+                    if(isset($item[0]['file_pdf'])){
+                ?>
+                <div style="text-align: center;">
+                    <a style="font-size: 14px;padding: 7px 15px;" href="<?= $var['v_pdf_url'].'/artikel/'.$item[0]['file_pdf'] ?>" class="btn btn-primary">Selengkapnya dapat di unduh disini</a>
+                </div>       
                 <?php 
+                    }
                     if(!empty($item[0]['reference'])){
                 ?>
+                <br>
                 <hr style="width: 50%;">
                 <div class="reference-article mt-5 mb-5">
                     <h4 class="mb-4">Referensi</h4>
