--- a/public/statis/main/header.html
+++ b/public/statis/main/header.html
@@ -85,7 +85,7 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		    <div class="container">
-		      <a class="navbar-brand" href=""><img class="img-nav" src="assets/img/logo.png"></a>
+		      <a class="navbar-brand" href="<?= $var['http'] ?>"><img class="img-nav" src="assets/img/logo.png"></a>
 		      
 		        	<div class="hamburger">
 		            	<span class="line"></span>
