--- a/public/statis/main/header.html
+++ b/public/statis/main/header.html
@@ -79,7 +79,23 @@
         });
     </script>
     <script src="_frontend/vendor/fcc/phone.js"></script>
-    <?php } ?>
+    <?php }
+        if($pg == 'donasi'){
+     ?>
+        <link rel="stylesheet" href="_frontend/vendor/fcc/multistep.css">
+        <script src="https://colorlib.com/etc/bwiz/colorlib-wizard-6/js/jquery-3.3.1.min.js"></script>
+        <link rel="stylesheet" href="_frontend/vendor/select2/css/select2.min.css?'. rand(1,1000); ?>">
+        <script src="_frontend/vendor/select2/js/select2.min.js" type="text/javascript" language="javascript"></script>
+        <script>
+            $(document).ready(function() {
+                $(".select2").select2();
+            });
+        </script>
+        <script src="_frontend/vendor/fcc/phone.js"></script>
+     <?php 
+        }
+     ?>
+
 </head>
 <body>
 	<header>
