--- a/public/dinamis/loop/formdonate.html
+++ b/public/dinamis/loop/formdonate.html
@@ -79,7 +79,13 @@
                     <div class="row form-group position-relative">
                         <div class="input-radio modal-btn">
                             <input type="checkbox" name="is_private" class="box-label-statement" value="yes" required>
-                            <span class="ml-2">Klik saya untuk berdonasi secara anonymous.</span>
+                            <span class="ml-2">Klik saya untuk berdonasi secara anonymous (nama akan disamarkan).</span>
+                            <!-- div class="form-check">
+                              <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                              <label class="form-check-label" for="defaultCheck1">
+                                Klik saya untuk berdonasi secara anonymous (nama akan disamarkan).
+                              </label>
+                            </div> -->
                         </div>
                     </div>
 
