--- a/public/dinamis/loop/detailartikel.html
+++ b/public/dinamis/loop/detailartikel.html
@@ -13,28 +13,45 @@
                 if(count($item[0]) > 0 && $item[0]['publish_date'] <= date("Y-m-d H:i:s")){
                     //foreach($data as $item){
                         //if($item['publish_date'] <= date("Y-m-d H:i:s")){
-                        
             ?>
+            <div class="tagline mb-5 col-md-8">
+            <?php
+                if(!empty($item[0]['tagline'])){
+                    $tagline = explode(';',$item[0]['tagline']);
+                    foreach($tagline as $tag){
+            ?>
+                <div class="listTag"><?= $tag ?></div>
+            <?php 
+                    }
+                }
+            ?>
+            </div>
                 <div class="head-artikels">
-                    <h3 class="judul-artikel mb-3"><?= $item[0]['title']; ?></h3>
                     <div class="dateby mb-2">
-                        <p class="datepost"><?= admin::format_date($item[0]['publish_date'],"id","A"); ?></p>
+                        <p class="datepost"><b><?= admin::format_date($item[0]['publish_date'],"id","A"); ?></b></p>
                         <?php
                         if($item[0]['writer_n'] == 'show'){
                         ?>
                         &nbsp;&nbsp;&nbsp;
                         <p class="dash-ver">-</p>
                         &nbsp;&nbsp;&nbsp;
-                        <p class="dash-ver">oleh <b><?= isset($item[0]['writer']) ? $item[0]['writer'] : 'Anonymous'?></b></p>
+                        <p class="dash-ver"><b><?= !empty($item[0]['writer']) ? $item[0]['writer'] : 'Anonymous'?></b></p>
                         <?php } ?>
                     </div>
+                    <h3 class="judul-artikel mb-3"><?= $item[0]['title']; ?></h3>
                 </div>
 
+                <?php 
+                    if(!empty($item[0]['image'])){
+                ?>
                 <div class="img-detail-artikel">
                     <img class="" src="<?= $item[0]['image_cover']; ?>">
                 </div>
+                <?php
+                    }
+                ?>
                 <div class="content-detail mt-3">
-                    <p class="kategori-artikel"><b><?= strtoupper($item[0]['category_name'])?></b> &nbsp;&nbsp; - &nbsp;&nbsp; <?= $item[0]['min_read']?> min read</p>
+                    <p class="kategori-artikel"><b><?= strtoupper($item[0]['category_name'])?></b> &nbsp;&nbsp; - &nbsp;&nbsp; Dibaca Normal <?= $item[0]['min_read']?> menit</p>
                     <div class="isi-artikel mt-3">
                         <div name="content" id="p_content" class="ckeditor ck ck-content ck-blurred" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
                             <?= $item[0]['content']?>
@@ -44,7 +61,7 @@
                 <?php
                     if(!empty($item[0]['file_pdf'])){
                 ?>
-                <div style="text-align: center;">
+                <div class="mb-3 mt-5" style="text-align: center;">
                     <a style="font-size: 14px;padding: 7px 15px;" href="<?= $var['v_pdf_url'].'/artikel/'.$item[0]['file_pdf'] ?>" class="btn btn-primary">Selengkapnya dapat di unduh disini</a>
                 </div>       
                 <?php 
@@ -55,7 +72,7 @@
                 <hr style="width: 50%;">
                 <div class="reference-article mt-5 mb-5">
                     <h4 class="mb-4">Referensi</h4>
-                    <div>
+                    <div class="reference">
                         <?= $item[0]['reference']?>
                     </div>
                 </div>
