--- a/public/dinamis/loop/detailinfografis.html
+++ b/public/dinamis/loop/detailinfografis.html
@@ -1,4 +1,4 @@
-<div id="carouselExample" class="bootstrap-css  carousel slide" data-ride="carousel">
+div id="carouselExample" class="bootstrap-css  carousel slide" data-ride="carousel">
           <div class="bootstrap-css  carousel-inner">
         <?php 
           if(count($data) > 0){
